# just-latex

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs
examples/: build.sh  demo.html  demo.md  fwht.html  fwht.md  jlconfig.toml  styles.html  styles.md
examples/temp/: source.aux  source.dvi  source.synctex  source.tex
src/: config.rs  main.rs  svg.rs  svg_optimize.rs  svg_utils.rs  svgopt.rs  synctex.rs
