[package]
name = "just-latex"
version = "0.1.3"
edition = "2021"
description = "A simple Pandoc filter enabling the use of the actual LaTeX engine to render LaTeX fragments in Markdown."
readme = "README.md"
license = "MIT"
repository = "https://github.com/ma-chengyuan/just-latex"
keywords = ["pandoc", "latex", "markdown", "svg"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.9"
indoc = "1.0"
tempfile = "3"
regex = "1"
usvg = "0.23"
xz2 = "0.1"
base64 = "0.13"
bytesize = "1.0"
config = "0.13"
html-escape = "0.2"
quick-xml = "0.23"
ordered-float = "3"
libz-sys = {version = "1.1.8", features = ["static"]}

[build-dependencies]
cc = "1.0"
bindgen = "0.53.1"